fix failed to deploy